--- a/src/components/Bx.css
+++ b/src/components/Bx.css
@@ -1221,3 +1221,9 @@
 						display: none;
 					}
 				}
+
+					@media screen and (max-width:639px) {
+					.nhh{
+						margin-top: 20px;
+					}
+				}
